<resources>
    <string name="app_name">TravelApp</string>
    <string name="contact">Contact</string>
    <string name="login_title">Login</string>
    <string name="login_email_label">Enter your email</string>
    <string name="login_password_label">Password</string>
    <string name="register_title">Register</string>
    <string name="register_subtitle">Please register to login.</string>
    <string name="register_name">Enter your name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="enter_input">Enter Input</string>
    <string name="main_title">Welcome back</string>
    <string name="register_confirm_password_label">Confirm password</string>
    <string name="not_account">Don\'t have an account? Sign up</string>
    <string name="already_account">Already an account? Sign in</string>
    <string name="btn_register">Register</string>
    <string name="btn_go_to_login">Go to Login Page</string>
    <string name="btn_go_to_register">Go to Register Page</string>
    <string name="desc_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="filter">Filter</string>
    <string name="search_destinations">Where to?</string>
    <string name="email_required_error">Email is required</string>
    <string name="invalid_email_error">Enter a valid email</string>
    <string name="username_error">Username required</string>
    <string name="special_characters_error">No special characters allowed</string>
    <string name="password_length">Password must be at least 8 characters</string>
    <string name="password_mismatch_error">Passwords do not match</string>
    <string name="password_uppercase_constraint">Must contain one uppercase letter</string>
    <string name="password_lowercase_constraint">Must contain one lowercase letter</string>
    <string name="password_one_digit_constraint">Must contain one digit</string>
    <string name="user_registered_success_message">User registered: %1$s</string>
    <string name="welcome_back">Welcome back, %1$s!</string>
    <string name="password_constraint">Password must be at least 8 characters"</string>
    <string name="password_required_error">Please enter your password</string>
    <string name="password_special_character_constraint">Must contain one special character"</string>
    <string name="register_first_message">Please register first.</string>
    <string name="invalid_field">Invalid email or password"</string>
    <string name="registration_successful_message">Registration successful! Please login."</string>
    <string name="price_tag">$ %1$s</string>
    <string name="no_reviews_available_message">No reviews available for this destination.</string>
    <string name="rating_card_view_label">Rating: %1$s</string>
    <string name="attractions_label">Attractions</string>
    <string name="reviews_label">Reviews</string>
    <string name="tab_unknown">\???</string>
    <string name="loading_message">Loading…</string>
    <string name="animation_completed_message">Animation Completed</string>
    <string name="full_load_percent">100%</string>
    <string name="progress_percentage">%1$s %</string>
    <string name="come_back_notification_message">Come Back</string>
    <string name="user_inactivity_message">You have been away for 30 seconds.</string>
    <string name="notification_broadcast_content">Tap to open the main activity.</string>
    <string name="broadcast_button">broadcast</string>
    <string name="other_app_broadcast_confirmation_message">"Colleague Broadcast Received"</string>
    <string name="all_text">All</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="update_destination_desc">Update Destination</string>
    <string name="favorite_button">Add to favorite</string>
    <string name="delete_destination_title">Delete destination</string>
    <string name="delete_attraction_title">Delete attraction</string>
    <string name="delete_attraction_message">Are you sure you want to delete this attraction?</string>
    <string name="delete_destination_message">Are you sure you want to delete it?</string>
    <string name="delete_yes_option">yes</string>
    <string name="delete_no_option">no</string>
    <string name="save_destination">Save</string>
    <string name="destination_name_text_label">Destination name</string>
    <string name="country_text_label">Country</string>
    <string name="price_text_label">Price</string>
    <string name="duration_text_label">Duration (days)</string>
    <string name="add_destination_desc">Add a new destination</string>
    <string name="add_attraction_desc">Add a new attraction</string>
    <string name="add_review_desc">Add a new review</string>
    <string name="error_save_failed">Cannot save destination</string>
    <string name="bottom_nav_home_text">Home</string>
    <string name="bottom_nav_favorites_text">Favorites</string>
    <string name="bottom_nav_settings_text">Settings</string>
    <string name="bottom_nav_logout_text">Logout</string>
    <string name="add_button_name">Add</string>
    <string name="cancel_button_name">Cancel</string>
    <string name="user_review_missing_fields_message">Username and Rating are required</string>
    <string name="saved_destination_message">Saved successfully!</string>
    <string name="error_message_no_fragment">No fragment factory found for position: %d</string>
    <string name="choose_image_text">Choose Image</string>
    <string name="attraction_title_label">Attraction Title</string>
    <string name="description_title_label">Description</string>
    <string name="image_file_name">img_%d.jpg</string>
    <string name="username_review_dialog_text">Username</string>
    <string name="comment_review_dialog">Comment</string>
    <string name="rating_review_dialog">Rating (1–5)</string>
    <string name="result_state_success_message">Success</string>
    <string name="add_destination_title">Add new destination</string>
    <string name="travel_type_hint_text">Travel Type</string>
    <string name="destination_details_label">Destination details</string>
    <string name="back_button_text">Back</string>
    <string name="next_button_text">Next</string>
    <string name="favorite_destinations_screen_title">Favorite Destinations</string>
    <string name="no_favorites_added_message">No favorites added yet.</string>
    <string name="google_maps_key">AIzaSyBC-lRfK3cL5Ql5C10_OsYmepYLT7WVjR0</string>
    <string name="settings_label_name">Settings</string>
    <string name="app_theme_label">App Theme</string>
    <string name="dark_mode_switch_text">Dark Mode</string>
    <string name="empty_list_message">"Add your first destination"</string>
    <string name="share_destination_text">Check out this destination: %1$s in %2$s for only $%3$.2f!</string>
    <string name="share_destination_intent_message">Share destination via</string>
    <string name="mime_text_plain">text/plain</string>
    <string name="dark_mode">Dark mode</string>
    <string name="bottom_nav_profile_text">Profile</string>
    <string name="hello_user">Hello %1$s</string>
    <string name="back">Back</string>
    <string name="appearance">Appearance</string>
    <string name="personal_data">Personal information</string>
    <string name="username">Username</string>
    <string name="username_hint">username</string>
    <string name="email_text_view">Email</string>
    <string name="user_profile_label">Your profile</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="save">Save</string>
    <string name="personal_information_label">Personal Information</string>
    <string name="based_on_reviews">based on %1$d reviews</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="address_search_format">%1$s, %2$s</string>
</resources>