<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_standard"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/default_corner_radius"
    app:cardElevation="@dimen/default_card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_small"
            android:fontFamily="@font/be_vietnam_pro_medium"
            android:text="@string/delete_attraction_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/large_margin_top"
            android:fontFamily="@font/be_vietnam_pro_light"
            android:text="@string/delete_attraction_message"
            android:textColor="@color/md_theme_secondaryFixed_mediumContrast"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_small"
                android:fontFamily="@font/be_vietnam_pro_medium"
                android:text="@string/cancel_button_name"
                android:textColor="@color/md_theme_secondaryFixed_mediumContrast" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_onPrimaryFixedButton"
                android:fontFamily="@font/be_vietnam_pro_medium"
                android:text="@string/delete_button"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>